--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,7 +15,8 @@ body {
   background-color: #FDFCEC;
   font-family: 'Roboto', sans-serif;
   line-height: 1.25rem;
-  min-height: 100vh; }
+  min-height: 100vh;
+  position: relative; }
 
 ::selection {
   color: #F8333C; }
@@ -37,15 +38,15 @@ i {
   color: #F8333C; }
 
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
+  position: fixed;
+  bottom: 0;
   text-align: center;
   font-size: 1.5rem;
   color: #424342;
-  opacity: .2;
-  height: 10vh; }
+  opacity: .1;
+  height: 10vh;
+  width: 100%;
+  z-index: -1; }
 
 header {
   height: 10vh;
@@ -414,7 +415,7 @@ header {
             align-items: center; } }
         @media (max-width: 596px) {
           .hero-carousel__slider--active img {
-            object-fit: fill;
+            object-fit: contain;
             background-position: center; } }
       .hero-carousel__slider--active button {
         display: flex;
