--- a/src/scss/_register.scss
+++ b/src/scss/_register.scss
@@ -29,23 +29,24 @@
         border-radius: .5rem;
         box-shadow: rgba(0, 0, 0, 0.20) 0px 8px 24px 0px;
         visibility: hidden;
-        @include xs {
-            width: 100%;
-        }
 
-        @include md {
-            width: calc(100% + -3em);
-            height: 60rem;
-            padding: 5rem;
-        }
-
+        
         @include lg{
             width: calc(100% + -1em);
             height: 70rem;
             gap: 3rem;
             padding: 3rem;
         }
+       
+        @include md {
+            width: calc(100% + -3em);
+            height: 60rem;
+            padding: 5rem;
+        }
 
+        @include sm {
+            width: 100%;
+        }
 
         >* {
             flex-basis: 100%;
