--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -102,14 +102,26 @@
             font-size: clamp(1rem, 3vw, 1.5rem);
 
             @include md {
-                width: calc(100% - 2em);
+              width: calc(100% - 2em);
                 padding: 1rem 0;
             }
 
             &:hover {
                 background-color: $color-blue;
                 color: $color-white;
+               
             }
+
+            @include sm {
+                
+                &:hover, &:focus {
+                    outline: none;
+                    background-color: white;
+                    color: $color-lightblue;
+                }
+            }
+
+            
 
         }
 
