--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -78,7 +78,7 @@
 
     &__item {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
         width: 13rem;
