--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1307,7 +1307,7 @@ header {
       flex-basis: 100%; }
   .cart__item {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     width: 13rem;
