--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -240,7 +240,7 @@
                 background-position: center;
                 background-image: radial-gradient(circle, transparent 1%, $color-lightblue .5%);
                 background-size: 12000%;
-                opacity: .9;
+                opacity: 1;
 
                 &:active {
                     background-color: $color-white;
