--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -526,6 +526,9 @@ header {
     justify-content: space-around;
     flex-direction: column;
     gap: 1rem; }
+    @media (max-width: 596px) {
+      .product__row__info {
+        padding: 0 1rem; } }
     .product__row__info--name {
       font-size: clamp(1rem, 4vw, 2rem);
       color: #0B3954; }
@@ -533,6 +536,9 @@ header {
       display: flex;
       gap: 5rem;
       font-size: clamp(0.6rem, 4vw, 1.6rem); }
+      @media (max-width: 596px) {
+        .product__row__info--details {
+          gap: 7rem; } }
     .product__row__info--description {
       display: flex;
       flex-direction: column;
@@ -553,6 +559,9 @@ header {
         border: none;
         cursor: pointer;
         animation: animated-border 1.5s infinite; }
+        @media (max-width: 596px) {
+          .product__row__info--buy button {
+            width: 100%; } }
 
 @keyframes animated-border {
   0% {
@@ -652,6 +661,9 @@ header {
             padding: 1rem; }
             .radio__tabs--review--details form input::placeholder {
               font-size: 1rem; }
+            @media (max-width: 596px) {
+              .radio__tabs--review--details form input {
+                width: 82%; } }
           .radio__tabs--review--details form button {
             padding: 1em;
             width: 75%;
