--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -8,6 +8,9 @@ header {
     width: 100%;
     visibility: hidden;
     position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 100000000;
 
     img {
         display: none; 
